dummy/kubernetes/sensor-cw-depl.yml
apiVersion: v1
kind: Service
metadata:
  name: sensor-cw-service
spec:
  selector:
    app: sensor-cw
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor-cw-deployment
  labels:
    app: sensor-cw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensor-cw
  template:
    metadata:
      labels:
        app: sensor-cw
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: node
                operator: In
                values:
                - cloud1
      containers:
        - name: sensor-cw
          image: ecobench/sensor-cloud:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: github-regsecr
