dummy/kubernetes/sensor-device-depl.yml
apiVersion: v1
kind: Service
metadata:
  name: sensor-device-service
spec:
  selector:
    app: sensor-device
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor-device-deployment
  labels:
    app: sensor-device
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensor-device
  template:
    metadata:
      labels:
        app: sensor-device
    spec:
      containers:
        - name: sensor-device
          image: docker.pkg.github.com/eco-bench/eco-bench/sensor-edge-device:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: github-regsecr
