dummy/kubernetes/sensor-ew1-depl.yml
apiVersion: v1
kind: Service
metadata:
  name: sensor-ew1-service
spec:
  selector:
    app: sensor-ew1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor-ew1-deployment
  labels:
    app: sensor-ew1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensor-ew1
  template:
    metadata:
      labels:
        app: sensor-ew1
    spec:
      containers:
        - name: sensor-ew1
          image: ecobench/sensor-edge:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: github-regsecr
