dummy/kubernetes/sensor-ew2-depl.yml
apiVersion: v1
kind: Service
metadata:
  name: sensor-ew2-service
spec:
  selector:
    app: sensor-ew2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor-ew2-deployment
  labels:
    app: sensor-ew2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensor-ew2
  template:
    metadata:
      labels:
        app: sensor-ew2
    spec:
      containers:
        - name: sensor-ew2
          image: docker.pkg.github.com/eco-bench/eco-bench/sensor-edge:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: github-regsecr
